--- a/jkm/crawlers/templates/crawlers/index.html
+++ b/jkm/crawlers/templates/crawlers/index.html
@@ -24,7 +24,7 @@
                 <div class="stars">
                     <div>
                         <div class="star">
-                            <img src="{% static 'starempty.svg' %}" alt="star" class="star">
+                            <img src="{% static 'imgs/starempty.svg' %}" alt="star" class="star">
                             <label for="">{{product.avg_rating}}</label>
                         </div>
                         <label for="" class="avg-rating">
