--- a/jkm/crawlers/templates/crawlers/base.html
+++ b/jkm/crawlers/templates/crawlers/base.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'index.css' %}" />
+    <link rel="shortcut icon" href="{% static 'imgs/favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}" />
     <title>Jumia-Killimall Price Comparison</title>
 </head>
 
@@ -15,24 +16,34 @@
     <nav>
         <div class="container nav-container">
             <div class="nav-logo">
-                <img src="{% static 'navlogo.svg' %}" alt="">
+                <img src="{% static 'imgs/navlogo.svg' %}" alt="">
             </div>
 
             <div class="search-icon">
-                <div>
-                    <img src="{% static 'search.svg' %}" alt="">
+                <div id="search-icon">
+                    <img src="{% static 'imgs/search.svg' %}" alt="">
                     <label for=""><b>Search</b></label>
                 </div>
+
+                <form action="" class="search-input animate__animated animate__fadeInRight" id="search-bar"
+                    method="GET">
+                    <div class="arrow" id="arrow">
+                        <img src="{% static 'imgs/arrow.svg' %}" alt="" class="back-arrow" id="back-arrow">
+                    </div>
+                    <input type="text" placeholder="Search by name" class="search-text">
+                    <input type="image" src="{% static 'imgs/search.svg' %}" alt="Submit" class="search-img">
+                </form>
             </div>
         </div>
     </nav>
 
     <div class="main-section">
         <div class="container">
-        {% block body_block %}No Products{% endblock %}
+            {% block body_block %}No Products{% endblock %}
         </div>
     </div>
-
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 
 </html>
