--- a/jkm/crawlers/templates/crawlers/base.html
+++ b/jkm/crawlers/templates/crawlers/base.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div id="loading" class="animate__animated animate__fadeIn">
+        <div class=" animate__animated animate__fadeIn animate__infinite  animate__slower">
+            <img src="{% static 'imgs/navlogo.svg' %}" alt=""><br>
+            Loading...</div> </div>
     <nav>
         <div class="container nav-container">
             <div class="nav-logo">
