--- a/jkm/crawlers/templates/crawlers/base.html
+++ b/jkm/crawlers/templates/crawlers/base.html
@@ -30,7 +30,7 @@
                     <label for="">Search</label>
                 </div>
 
-                <form action="" class="search-input animate__animated animate__fadeInRight" id="search-bar"
+                <form action="" class="search-input animate__animated animate__fadeIn" id="search-bar"
                     method="GET">
                     <div class="arrow" id="arrow">
                         <img src="{% static 'imgs/arrow.svg' %}" alt="" class="back-arrow" id="back-arrow">
