--- a/jkm/crawlers/static/css/index.css
+++ b/jkm/crawlers/static/css/index.css
@@ -28,7 +28,8 @@ nav{
     grid-template-columns: 50% 50%;
 }
 .nav-logo img{
-    max-width: 150px;
+    max-width: 280px;
+    margin-top: .15rem;
 }
 
 .search-icon, .search-input{
@@ -276,7 +277,9 @@ border-radius: 2px;
 @media screen and (max-width: 768px){
 
 .nav-logo img{
-    max-width: 130px;
+    max-width: 240px;
+    margin-top: 0rem;
+    margin-bottom: -.25rem;
 }
 .pagination-container{
     justify-content: center;
@@ -324,4 +327,42 @@ border-radius: 2px;
     display: block;
     font-size: 1.75rem;
 }
+}
+
+@media screen and (max-width: 440px){
+    .nav-logo{
+        display: grid;
+        width: 100%;
+        place-items: center;
+    }
+    .nav-container{
+    grid-template-columns: 100%;
+    }
+.nav-logo img{
+    max-width: 300px;
+    width: 200px;
+    margin-top: 0rem;
+    margin-bottom: -.25rem;
+}
+.search-input{
+    display: block;
+    margin-top: 2.5rem;
+    background-color: #fff;
+    height: 50px !important;
+    box-shadow: 0px 0px 10px silver;
+}
+.products{
+    margin-top: 5rem;
+}
+#arrow{
+    display: none;
+}
+#search-icon{
+    display: none;
+}
+.search-input .search-text{
+    width: 100% !important;
+    padding: auto;
+    margin-left: -1.75rem !important;
+} 
 }
