--- a/jkm/crawlers/templates/crawlers/index.html
+++ b/jkm/crawlers/templates/crawlers/index.html
@@ -11,12 +11,12 @@
 {% if page_obj|length == 0%}
 <div class="search-no animate__animated animate__fadeIn">
     <div>
-    <h2>
-        ({{qualified_products|length}}) results not found.
-    </h2>
-    <p>Try to search using a brand name, specific product <br> name or any other product specifications</p>
-    <br>
-    <a href="/">View All Products</a>
+        <h2>
+            ({{qualified_products|length}}) results not found.
+        </h2>
+        <p>Try to search using a brand name, specific product <br> name or any other product specifications</p>
+        <br>
+        <a href="/">View All Products</a>
     </div>
 </div>
 {% else %}
@@ -49,7 +49,22 @@
                         </label>
                     </div>
                 </div>
-                <!-- <a href="{{product.link }}" target="_blank">View on {{product.site}}</a><br> -->
+                {% if product.site_id  == 2 %}
+                <div class="a-site">
+                    <a href="{{ product.link  }}">
+                        <img src="{% static 'imgs/kilimall.svg' %}" alt=""></a>
+                </div>
+                {% elif   product.site_id == 1 %}
+                <div class="a-site">
+                <a href="{{ product.link  }}">
+                    <img src="{% static 'imgs/jumia.svg' %}" alt=""></a>
+                </div>
+                {% else %}
+                <div class="a-site">
+                    <a href="{{ product.link  }}">
+                        <img src="{% static 'imgs/masoko.svg' %}" alt=""></a>
+                    </div>
+                {% endif %}
             </div>
         </a>
     </div>
@@ -65,11 +80,11 @@
                 First</a>
         </li>
         <li><a href="?page={{ page_obj.previous_page_number }}">
-                <</a>
+                << /a>
         </li>
         {% elif page_obj|length > 0 %}
         <li class="disabled"><span class="chevron">
-                <</span>
+                << /span>
         </li>
         {% else %}
         {% endif %}
