--- a/jkm/crawlers/templates/crawlers/index.html
+++ b/jkm/crawlers/templates/crawlers/index.html
@@ -20,6 +20,7 @@
     </div>
 </div>
 {% else %}
+<h2 class="best-deals">Best Deals</h2>
 <div class="products">
     {% for product in page_obj %}
     <div class="product">
